--- a/scrollreveal/scrollreveal.html
+++ b/scrollreveal/scrollreveal.html
@@ -34,7 +34,7 @@
                 <h2>LATEST NEWS</h2>
                 <h3>最新消息</h3>
             </div>
-            <div class="slider">
+            <div class="slider-news">
                 SLIDER
             </div>
             <div class="btnbox">
@@ -48,6 +48,36 @@
                 <h2>BRAND INTRODUCTION</h2>
                 <h3>品牌簡介</h3>
             </div>
+            <div class="intro-container">
+                <div class="intro-img">
+                    <img src="https://fakeimg.pl/500x700/?text=intro" alt="" >
+                </div>
+                <div class="intro-content">
+                    <h3>流傳百年 京都念慈菴</h3>
+                    <h4>流芳百世的孝親故事，嘉惠世人的天然產品</h4>
+                    <p>
+                        延續楊氏感人孝親故事，以正統正方正藥嘉惠世人，目前共有數十個國家進口京都念慈菴川貝枇杷膏，風行全球各地 !
+                    </p>
+                    <div class="intro-icon">
+                        <div class="icon-iten">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                            <p>【中成藥系列】</p>
+                        </div>
+                        <div class="icon-iten">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                            <p>【喉糖系列】</p>
+                        </div>
+                        <div class="icon-iten">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                            <p>【枇杷膏系列】</p>
+                        </div>
+                        <div class="icon-iten">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                            <p>【保健食品系列】</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="btnbox">
                 <a href="#" class="btn-more">
                     觀看更多
@@ -59,6 +89,9 @@
                 <h2>SHOPPING</h2>
                 <h3>產品推薦</h3>
             </div>
+            <div class="slider-shopping">
+                SLIDER222
+            </div>
             <div class="btnbox">
                 <a href="#" class="btn-more">
                     觀看更多
@@ -69,6 +102,204 @@
             <div class="sec-title">
                 <h2>MOVING WALL</h2>
                 <h3>貼文牆</h3>
+            </div>
+            <div class="wall-container">
+                <div class="wall-item">
+                    <div class="wall-item-top">
+                        <div class="wit-pic"></div>
+                        <div class="wit-logo">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                        </div>
+                        <div class="wit-text">
+                            <a href="#">京都念慈菴（Taiwan）</a>
+                            <p id="wit-date">07月09日</p>
+                        </div>
+                    </div>
+                    <div class="wall-item-center">
+                        <div id="wall-item-text">
+                            <p>
+                                這周開始，就是一年中最濕熱的「三伏天」（小暑到立秋）！大熱天來杯冰冰涼涼的飲料真的好消暑，不過含糖量高的飲料喝完可能更渴~喝對消暑退火的茶飲，才能幫助身體降溫：
+                            </p>
+                            <br>
+                            <p>
+                                1、金銀花檸檬汁：檸檬、金銀花可以清熱，在家就能簡單自製。作法>>https://pse.is/T7UFZ
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                        </div>
+                    </div>
+                    <div class="wall-item-bottom">
+                        <div class="wib-count">
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="good-count">5</span>
+                            </div>
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="comment-count">0</span>
+                            </div>
+                        </div>
+                        <div class="wib-link">
+                            <a href="#">前往頁面</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-item">
+                    <div class="wall-item-top">
+                        <div class="wit-pic"></div>
+                        <div class="wit-logo">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                        </div>
+                        <div class="wit-text">
+                            <a href="#">京都念慈菴（Taiwan）</a>
+                            <p id="wit-date">07月09日</p>
+                        </div>
+                    </div>
+                    <div class="wall-item-center">
+                        <div id="wall-item-text">
+                            <p>
+                                這周開始，就是一年中最濕熱的「三伏天」（小暑到立秋）！大熱天來杯冰冰涼涼的飲料真的好消暑，不過含糖量高的飲料喝完可能更渴~喝對消暑退火的茶飲，才能幫助身體降溫：
+                            </p>
+                            <br>
+                            <p>
+                                1、金銀花檸檬汁：檸檬、金銀花可以清熱，在家就能簡單自製。作法>>https://pse.is/T7UFZ
+                            </p>
+                            <br>
+                            <p>
+                                1、金銀花檸檬汁：檸檬、金銀花可以清熱，在家就能簡單自製。作法>>https://pse.is/T7UFZ
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                        </div>
+                    </div>
+                    <div class="wall-item-bottom">
+                        <div class="wib-count">
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="good-count">5</span>
+                            </div>
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="comment-count">0</span>
+                            </div>
+                        </div>
+                        <div class="wib-link">
+                            <a href="#">前往頁面</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-item">
+                    <div class="wall-item-top">
+                        <div class="wit-pic"></div>
+                        <div class="wit-logo">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                        </div>
+                        <div class="wit-text">
+                            <a href="#">京都念慈菴（Taiwan）</a>
+                            <p id="wit-date">07月09日</p>
+                        </div>
+                    </div>
+                    <div class="wall-item-center">
+                        <div id="wall-item-text">
+                            <p>
+                                這周開始，就是一年中最濕熱的「三伏天」（小暑到立秋）！大熱天來杯冰冰涼涼的飲料真的好消暑，不過含糖量高的飲料喝完可能更渴~喝對消暑退火的茶飲，才能幫助身體降溫：
+                            </p>
+                            <br>
+                            <p>
+                                1、金銀花檸檬汁：檸檬、金銀花可以清熱，在家就能簡單自製。作法>>https://pse.is/T7UFZ
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                        </div>
+                    </div>
+                    <div class="wall-item-bottom">
+                        <div class="wib-count">
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="good-count">5</span>
+                            </div>
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="comment-count">0</span>
+                            </div>
+                        </div>
+                        <div class="wib-link">
+                            <a href="#">前往頁面</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-item">
+                    <div class="wall-item-top">
+                        <div class="wit-pic"></div>
+                        <div class="wit-logo">
+                            <img src="https://fakeimg.pl/50x50/?text=icon" alt="">
+                        </div>
+                        <div class="wit-text">
+                            <a href="#">京都念慈菴（Taiwan）</a>
+                            <p id="wit-date">07月09日</p>
+                        </div>
+                    </div>
+                    <div class="wall-item-center">
+                        <div id="wall-item-text">
+                            <p>
+                                這周開始，就是一年中最濕熱的「三伏天」（小暑到立秋）！大熱天來杯冰冰涼涼的飲料真的好消暑，不過含糖量高的飲料喝完可能更渴~喝對消暑退火的茶飲，才能幫助身體降溫：
+                            </p>
+                            <br>
+                            <p>
+                                1、金銀花檸檬汁：檸檬、金銀花可以清熱，在家就能簡單自製。作法>>https://pse.is/T7UFZ
+                            </p>
+                            <br>
+                            <p>
+                                2、草本積熱清：有恰恰好的檸檬酸味，和石斛、金銀花、陳皮、決明子等數十種天然降火草本。
+                                夏天降火天然飲品．積熱清>>https://pse.is/S3GU8
+                            </p>
+                        </div>
+                    </div>
+                    <div class="wall-item-bottom">
+                        <div class="wib-count">
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="good-count">5</span>
+                            </div>
+                            <div class="wib-count-text">
+                                <img src="https://fakeimg.pl/20x20/?text=icon" alt="">
+                                <span id="comment-count">0</span>
+                            </div>
+                        </div>
+                        <div class="wib-link">
+                            <a href="#">前往頁面</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <footer class="footer">
